# SimpleForest

./: .gitignore  CMakeLists.txt  报告文档.tex
include/assimp/include/assimp/: config.h
include/glad/: glad.h
include/stb/: stb_implementation.cpp
shaders/: basic.fs  basic.vs  skybox.fs  skybox.vs
src/: glad.c  main.cpp
src/core/: Camera.cpp  Camera.h  Model.cpp  Model.h  PathUtils.cpp  PathUtils.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/geometry/: Mesh.cpp  Mesh.h  PrimitiveFactory.cpp  PrimitiveFactory.h
src/input/: Input.cpp  Input.h
src/scene/: HouseRenderer.cpp  HouseRenderer.h  Materials.cpp  Materials.h  Tree.cpp  Tree.h
